# portafolio-django-backend

./: .env-example  docker-compose.yml  pyproject.toml
djangobackend/djangobackend/: settings.py  urls.py
djangobackend/messages/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
djangobackend/messages/migrations/: 0001_initial.py
